UI: Inaccurate Text -- Texture Paint -> Viewport Overlay -> "Stencil Opacity" -- does not affect Stencil, does affect the Stencil Mask Opacity #80031

Closed
opened 2020-08-23 03:00:01 +02:00 by gamepad.coder · 8 comments

Blender Version
Broken: v2.83.5

Short description of error :
3D Viewport -> Texture Paint mode -> Show Overlays -> dropdown options

  • Texture Paint -> Slider has text "Stencil Opacity"

This text needs to say "Stencil Mask Opacity",
since it does not affect the stencil opacity of the Draw tool.

Python tooltip :
Python: View3DOverlay.texture_paint_mode_opacity
bpy.data.screens["Texture Paint"].overlay.texture_paint_mode_opacity

Ambiguity :
When using a texture as a brush for the Draw tool in Texture Paint mode, when the Mapping is set to "Stencil"
(via Properties Editor -> Active Tool and Workspace settings tab -> Brush Settings -> Texture -> Mapping -> "Stencil")
the user will expect this overlay setting to affect the Draw Tool's Stencil opacity.

The setting which changes the Draw Tool's Stencil visual opacity :
3D Viewport in Paint Mode (with Draw tool selected) -> Sidebar -> Tool tab -> Brush Settings panel -> Cursor -> Texture Opacity
or :
Properties Editor -> Active Tool and Workspace settings tab -> Brush Settings -> Cursor -> Texture Opacity

Exact steps for others to reproduce the error :

blend.dev.#69172.p1_sizeOptimized.gif

blend.dev.#69172.p2a_sizeOptimized.gif

Related posts & Related instances where this has confused users :

If it's helpful, I think this is the original refactor + larger context, for reference:
https://developer.blender.org/D5279

The ambiguous text "Stencil Opacity" in the overlay resulted in the following bug reports:
https://developer.blender.org/T69172
https://developer.blender.org/T66968

The following is a good example of impact,
the linked answer inaccurately references this Stencil Mask Opacity slider (currently titled "Stencil Opacity")
as a solution for changing the Stencil's visual opacity:
https://blender.stackexchange.com/a/171004/103940

For what it's worth :

Using the Texture Paint mode for the first time, this was very confusing, and took me an hour to piece together the information.

Trying to figure out how to adjust the transparency of the stencil tool for better visibility of the object behind it was very difficult,
and several search results suggested changing this Stencil Mask Opacity setting, inaccurately.

Suggested Change :

Change the following Overlay setting's slider to have the following text :

3D Viewport -> in Texture Paint mode -> Show Overlays -> dropdown options

  • Texture Paint -> change the Slider's text to "Stencil Mask Opacity" instead.

(~Have a great day~)

**Blender Version** Broken: v2.83.5 **Short description of error :** `3D Viewport` -> `Texture Paint mode` -> `Show Overlays` -> dropdown options - > `Texture Paint` -> Slider has text "**Stencil Opacity**" This text needs to say "**Stencil Mask Opacity**", since it does *not* affect the stencil opacity of the Draw tool. **Python tooltip :** Python: View3DOverlay.texture_paint_mode_opacity bpy.data.screens["Texture Paint"].overlay.texture_paint_mode_opacity **Ambiguity :** When using a texture as a brush for the Draw tool in Texture Paint mode, when the Mapping is set to "Stencil" (via `Properties Editor` -> `Active Tool and Workspace settings` tab -> `Brush Settings` -> `Texture` -> `Mapping` -> "Stencil") the user will expect this overlay setting to affect the **Draw Tool's Stencil opacity**. **The setting which changes the Draw Tool's Stencil visual opacity :** `3D Viewport` in `Paint Mode` (with Draw tool selected) -> `Sidebar` -> `Tool` tab -> `Brush Settings` panel -> `Cursor` -> `Texture Opacity` or : `Properties Editor` -> `Active Tool and Workspace settings` tab -> `Brush Settings` -> `Cursor` -> `Texture Opacity` **Exact steps for others to reproduce the error :** ![blend.dev.#69172.p1_sizeOptimized.gif](https://archive.blender.org/developer/F8805164/blend.dev.#69172.p1_sizeOptimized.gif) ![blend.dev.#69172.p2a_sizeOptimized.gif](https://archive.blender.org/developer/F8805171/blend.dev.#69172.p2a_sizeOptimized.gif) **Related posts & Related instances where this has confused users :** If it's helpful, I think this is the original refactor + larger context, for reference: https://developer.blender.org/D5279 The ambiguous text "Stencil Opacity" in the overlay resulted in the following bug reports: https://developer.blender.org/T69172 https://developer.blender.org/T66968 The following is a good example of impact, the linked answer inaccurately references this Stencil Mask Opacity slider (currently titled "Stencil Opacity") as a solution for changing the Stencil's visual opacity: https://blender.stackexchange.com/a/171004/103940 **For what it's worth :** Using the Texture Paint mode for the first time, this was very confusing, and took me an hour to piece together the information. Trying to figure out how to adjust the transparency of the stencil tool for better visibility of the object behind it was very difficult, and several search results suggested changing this Stencil Mask Opacity setting, inaccurately. **Suggested Change :** Change the following Overlay setting's slider to have the following text : `3D Viewport` -> in `Texture Paint` mode -> `Show Overlays` -> dropdown options - > `Texture Paint` -> change the Slider's text to "**Stencil Mask Opacity**" instead. (~Have a great day~)
Author

Added subscriber: @Gamepad-Coder

Added subscriber: @Gamepad-Coder

Added subscribers: @Blendify, @mano-wii

Added subscribers: @Blendify, @mano-wii

@Blendify, is this something that should be forwarded to the Documentation module?

@Blendify, is this something that should be forwarded to the `Documentation` module?
Aaron Carlisle self-assigned this 2020-08-26 01:32:30 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Should probably be handled by #user_interface, but I agree with the task here.

Should probably be handled by #user_interface, but I agree with the task here.

This issue was referenced by bb4478f2fd

This issue was referenced by bb4478f2fdd8426d6050bf7b7c09611afeb1bd14
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by 2930d4fcea

This issue was referenced by 2930d4fcea405985f2212c5f28c061af7c4849f8
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80031
No description provided.