Fix T80031: UI: "Stencil Opacity" is vague

This affects the mask opacity not the stencil itself.